--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,7 @@ enableInlineShortcodes = true
 [params]
   favicon = "logo.png"
   description = "this is description of the website..."
+  random_reading_enable= true
   random_button_text = "Wondering"  
   mainSections = ["post"]
   copyright = "© 2017 - {{ now.Format \"2006\" }}"
