feat: update repo name

--- a/data/menu.toml
+++ b/data/menu.toml
@@ -6,7 +6,7 @@ title = "info"
 
   [[entries.entries]]
   title = "github repo"
-  url = "https://github.com/time2lifes/simpleart"
+  url = "https://github.com/jiaphyper/simpleart"
 
 
 [[entries]]
