--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://time2lifes.github.io/simpleart/"
+baseURL = "https://jiaphyper.github.io/simpleart/"
 languageCode = "en-us"
 title = "SimpleArt Theme Demo"
 theme = "simpleart"
